8279 socketpair(AF_UNIX, SOCK_DGRAM,...) broken after 7590 Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Dan McDonald <danmcd@kebe.com>